--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "kafkajs": "^2.2.4",
+    "mongodb": "^6.14.2",
+    "mongoose": "^8.12.1",
     "nodemon": "^3.1.9",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
