--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-push:
     name: Build and Push Docker Image
-    runs-on: ubuntu-latest # Runs on GitHub-hosted runner
+    runs-on: self-hosted # Runs on GitHub-hosted runner
 
     steps:
       - name: Checkout Repository
