--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,12 +30,16 @@ jobs:
 
   deploy:
     name: Deploy to kind Kubernetes Cluster
-    needs: build-and-push # Runs only if build-and-push is successful
+    needs: build-and-push
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
+
+      - name: List contents of the repository
+        run: |
+          ls -la /home/${{ secrets.VM_USER }}/actions-runner/_work/${{ github.repository }}
 
       - name: Apply Kubernetes Deployment
         run: |
