fixbug: in ci/cd

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,24 +29,19 @@ jobs:
           docker push jashpatel1511/web-order-service:latest
 
   deploy:
-    name: Deploy to kind Kubernetes Cluster
+    name: Deploy to Kubernetes Cluster on VM
     needs: build-and-push
-    runs-on: ubuntu-latest
+    runs-on: self-hosted # Make sure this runner has access to the Kubernetes cluster
 
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: List the contents of the current directory
+      - name: Set up kubectl
         run: |
-          ls -la /home/${{ secrets.VM_USER }}/actions-runner/_work/
+          sudo apt-get update && sudo apt-get install -y kubectl
 
-
-      - name: Apply Kubernetes Deployment
+      - name: Deploy to Kubernetes
         run: |
-          cd /home/${{ secrets.VM_USER }}/actions-runner/_work/${{ github.repository }}/k8s
-          kubectl apply -f .
-
-      - name: Cleanup
-        run: |
-          echo "No need to delete kind cluster as it is already up and running."
+          kubectl apply -f k8s/deployment.yaml
+          kubectl rollout status deployment/web-order-service
