--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,7 +37,12 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Deploy to Kubernetes
+      - name: Apply Kubernetes Resources
         run: |
-          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/OrderService-configMap.yaml
+          kubectl apply -f k8s/OrderService-secret.yaml
+          kubectl apply -f k8s/OrderService-deployment.yaml
+
+      - name: Wait for Deployment Rollout
+        run: |
           kubectl rollout status deployment/web-order-service
