docker: update docker file which is compatible to ts

--- a/k8s/OrderService-deployment.yaml
+++ b/k8s/OrderService-deployment.yaml
@@ -47,5 +47,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 9002
-      nodePort: 30080 # You can choose any free port above 30000
-  type: NodePort
+  type: LoadBalancer
