--- a/k8s/OrderService-deployment.yaml
+++ b/k8s/OrderService-deployment.yaml
@@ -1,3 +1,19 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: order-service-configmap
+data:
+  port: "9002"
+  valuation-service: "http://valuation-service"
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: order-service-secret
+type: Opaque
+stringData:
+  db_url: "your-db-connection-string"  # Replace with your actual DB URL
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,6 +35,7 @@ spec:
           image: jashpatel1511/web-order-service:latest
           ports:
             - containerPort: 9002
+              name: http
           env:
             - name: PORT
               valueFrom:
@@ -35,11 +52,26 @@ spec:
                 secretKeyRef:
                   name: order-service-secret
                   key: db_url
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+            initialDelaySeconds: 15
+            periodSeconds: 20
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: order-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Use Network Load Balancer
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
 spec:
   selector:
     app: order-api
@@ -47,4 +79,5 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 9002
+      name: http
   type: LoadBalancer
