--- a/k8s/OrderService-deployment.yaml
+++ b/k8s/OrderService-deployment.yaml
@@ -1,19 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: order-service-configmap
-data:
-  port: "9002"
-  valuation-service: "http://valuation-service"
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: order-service-secret
-type: Opaque
-stringData:
-  db_url: "your-db-connection-string"  # Replace with your actual DB URL
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -70,7 +54,7 @@ kind: Service
 metadata:
   name: order-service
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"  # Use Network Load Balancer
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
 spec:
   selector:
