--- a/k8s/OrderService-deployment.yaml
+++ b/k8s/OrderService-deployment.yaml
@@ -31,23 +31,16 @@ spec:
                 configMapKeyRef:
                   name: order-service-configmap
                   key: valuation-service
+            - name: PAYMENT_SERVICE
+              valueFrom:
+                configMapKeyRef:
+                  name: order-service-configmap
+                  key: payment-service
             - name: DB_URL
               valueFrom:
                 secretKeyRef:
                   name: order-service-secret
                   key: db_url
-          readinessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 10
-            periodSeconds: 5
-          livenessProbe:
-            httpGet:
-              path: /
-              port: http
-            initialDelaySeconds: 15
-            periodSeconds: 20
 ---
 apiVersion: v1
 kind: Service
